--- a/client/src/index.styles.scss
+++ b/client/src/index.styles.scss
@@ -1,6 +1,24 @@
 //fonts
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-//variables
+
+/****************************************/
+//scroll bar
+/****************************************/
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ccc;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+/****************************************/
 
 // global
 *,
@@ -53,10 +71,7 @@ body {
     justify-content: flex-start;
     align-items: center;
   }
-  &__cars {
-    background-color: orange;
-  }
-  
+
   &__app {
     // background-color: #fff;
     width: 100%;
